--- a/verglib/build.gradle
+++ b/verglib/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+    implementation 'com.android.volley:volley:1.1.0'
 }
